# GEMM-kernel-runtime

./: CMakeLists.txt  README.md  benchmark_results.csv  tile_runtime.plan.md
benchmarks/: benchmark_gemm.cpp
docs/: README.md  gemm_performance_comparison.html
include/: README.md  aligned_allocator.h  cpu_features.h  gemm.h
scripts/: README.md
src/: gemm_avx.cpp  gemm_avx512.cpp  gemm_parallel.cpp  gemm_parallel_avx512.cpp  gemm_parallel_simd.cpp  gemm_simd.cpp  runtime_placeholder.cpp
tests/: test_gemm.cpp  test_runtime.cpp  test_tensor.cpp
